update des.